[tool.poetry]
name = "mymemopy"
version = "0.1.0"
description = ""
authors = ["kurotom <55354389+kurotom@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mymemopy"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
terminal-in-colors = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
